tests/ui/g-route-policy-not-head.stderr
error[E0080]: evaluation panicked: Program::policy must annotate the controller self-send that opens each route/loop arm
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Route<hibana::g::Seq<hibana::g::Send<0, 0, hibana::g::Msg<92, (), hibana::integration::cap::control::RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<93, (), hibana::integration::cap::control::RouteDecisionKind>>, 7>>, hibana::g::Seq<hibana::g::Send<0, 0, hibana::g::Msg<94, (), hibana::integration::cap::control::RouteDecisionKind>>, hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<95, (), hibana::integration::cap::control::RouteDecisionKind>>, 7>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<Seq<hibana::g::Send<0, 0, Msg<92, (), RouteDecisionKind>>, Policy<hibana::g::Send<0, 0, Msg<93, (), RouteDecisionKind>>, 7>>, Seq<hibana::g::Send<0, 0, Msg<94, (), RouteDecisionKind>>, Policy<hibana::g::Send<0, 0, Msg<95, (), RouteDecisionKind>>, 7>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  | /             panic!(
  | |                 "Program::policy must annotate the controller self-send that opens each route/loop arm"
  | |             )
  | |_____________- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Route<Seq<hibana::g::Send<0, 0, Msg<92, (), RouteDecisionKind>>, Policy<hibana::g::Send<0, 0, Msg<93, (), RouteDecisionKind>>, 7>>, Seq<hibana::g::Send<0, 0, Msg<94, (), RouteDecisionKind>>, Policy<hibana::g::Send<0, 0, Msg<95, (), RouteDecisionKind>>, 7>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
